# mahjong-shanten-calculator

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  shanten.py  simple_test.py
templates/: index.html  index_man_only.html
